[package]
name = "nrf51-blinker"
version = "0.0.1"


[profile]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true


[dependencies]
cortex-m-semihosting = "0.2"
nrf51 = "0.4"

[dependencies.cortex-m-rt]
version = "0.3"
features = ["abort-on-panic"]

[dependencies.futures-await]
version = "0.2.0-alpha"
default-features = false

[dependencies.futures-hal]
git = "https://github.com/Nemo157/futures-hal-rs"
default-features = false

[dependencies.nrf51-hal]
version = "0.4"
default-features = false
features = ["rt"]

[dependencies.wfe-executor]
git = "https://github.com/Nemo157/wfe-executor-rs"


[patch.crates-io.futures]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-core]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-executor]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-io]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"
[patch.crates-io.futures-util]
git = "https://github.com/Nemo157/futures-rs"
branch = "atomic-std-only"

[patch.crates-io.futures-await]
git = "https://github.com/Nemo157/futures-await"
branch = "no_std_0.2"

[patch.crates-io.futures-stable]
git = "https://github.com/Nemo157/futures-stable"
branch = "un-unpin-the-blanket"

[patch.crates-io.nrf51-hal]
git = "https://github.com/Nemo157/nrf51-hal"
branch = "input-edges"

[patch.crates-io.embedded-hal]
git = "https://github.com/Nemo157/embedded-hal"
branch = "input-edges"
