[package]
name = "nrf51-blinker"
version = "0.0.1"


[profile]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true


[dependencies]
cortex-m-semihosting = "0.2"
nrf51 = "0.4"

[dependencies.pin-api]
version = "0.1.3"
default-features = false
features = ["nightly"]

[dependencies.nb]
git = "https://github.com/Nemo157/nb"
branch = "futures-io"
features = ["unstable"]

[dependencies.embedded-hal]
git = "https://github.com/Nemo157/embedded-hal"
branch = "futures-io"
features = ["unproven"]

[dependencies.cortex-m-rt]
version = "0.3"
features = ["abort-on-panic"]

[dependencies.futures-await]
version = "0.2.0-alpha"
default-features = false

[dependencies.nrf51-hal]
version = "0.4.2"
default-features = false
features = ["rt"]

[dependencies.wfe-executor]
git = "https://github.com/Nemo157/wfe-executor-rs"


[patch.crates-io.futures]
git = "https://github.com/Nemo157/futures-rs"
branch = "core-io"
[patch.crates-io.futures-core]
git = "https://github.com/Nemo157/futures-rs"
branch = "core-io"
[patch.crates-io.futures-executor]
git = "https://github.com/Nemo157/futures-rs"
branch = "core-io"
[patch.crates-io.futures-io]
git = "https://github.com/Nemo157/futures-rs"
branch = "core-io"
[patch.crates-io.futures-util]
git = "https://github.com/Nemo157/futures-rs"
branch = "core-io"

[patch.crates-io.futures-await]
git = "https://github.com/Nemo157/futures-await"
branch = "no_std_0.2"

[patch.crates-io.futures-stable]
git = "https://github.com/Nemo157/futures-stable"
branch = "un-unpin-the-blanket"

[patch.crates-io.nb]
git = "https://github.com/Nemo157/nb"
branch = "futures-io"

[patch.crates-io.embedded-hal]
git = "https://github.com/Nemo157/embedded-hal"
branch = "futures-io"
